Journal/2020/03/07.txt
Content-Type: text/x-zim-wiki
Wiki-Format: zim 0.4
Creation-Date: 2020-03-07T05:43:52-05:00

== Saturday 07 Mar 2020 ==


====== compiling linuxsampler family ======

@linuxsampler @compiling

[[https://davidbolton.info/articles/build_linuxsampler.html|a good howto reference]]

to create the configure file need to compile, run;

{{{code: lang="sh" linenumbers="False"
autoreconf --install
}}}


then, run configure with options to build the vst plugin, as well as adjust the cutoff frequencies;

* **need to use gcc++8 if compiling the svn trunk**

{{{code: lang="sh" linenumbers="False"
./configure --prefix=/usr \
--enable-vstsdk-dir=~/SDKS/VST3_SDK \
}}}



* if error "can't find parser.h", run: `make parser`
	* if error about "something POSIX Yacc", add "-Wno-yacc" to the parser generation scripts linuxsampler/scripts/generate_lscp_parser.sh and generate_instrument_script_parser.sh
		 {{{code: lang="sh" linenumbers="False"
			$YACC_CMD -Wno-yacc --update lscp.y
		
		}}}
		
	* then `make parser` again
	* then `make`

=== at this point...compile errors show: ===
{{{code: lang="cpp" linenumbers="False"
libtool: compile:  /usr/bin/g++-8 -std=gnu++14 -DHAVE_CONFIG_H -I. -I../../.. -I/usr/include/libgig -Wreturn-type -ffast-math -g -O2 -pthread -MT DiskThread.lo -MD -MP -MF .deps/DiskThread.Tpo -c DiskThread.cpp -o DiskThread.o >/dev/null 2>&1
In file included from ../common/Voice.h:28,
                 from ../EngineChannelBase.h:31,
                 from EngineChannel.h:30,
                 from InstrumentScriptVM.cpp:12:
../common/../gig/Filter.h:619:46: error: ‘vcf_type_lowpass_1p’ is not a member of ‘gig’
                 vcf_type_1p_lowpass = ::gig::vcf_type_lowpass_1p,
                                              ^~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:619:46: note: suggested alternative: ‘vcf_type_lowpass’
                 vcf_type_1p_lowpass = ::gig::vcf_type_lowpass_1p,
                                              ^~~~~~~~~~~~~~~~~~~
                                              vcf_type_lowpass
../common/../gig/Filter.h:620:47: error: ‘vcf_type_highpass_1p’ is not a member of ‘gig’
                 vcf_type_1p_highpass = ::gig::vcf_type_highpass_1p,
                                               ^~~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:620:47: note: suggested alternative: ‘vcf_type_highpass’
                 vcf_type_1p_highpass = ::gig::vcf_type_highpass_1p,
                                               ^~~~~~~~~~~~~~~~~~~~
                                               vcf_type_highpass
../common/../gig/Filter.h:621:46: error: ‘vcf_type_lowpass_2p’ is not a member of ‘gig’
                 vcf_type_2p_lowpass = ::gig::vcf_type_lowpass_2p,
                                              ^~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:621:46: note: suggested alternative: ‘vcf_type_lowpass’
                 vcf_type_2p_lowpass = ::gig::vcf_type_lowpass_2p,
                                              ^~~~~~~~~~~~~~~~~~~
                                              vcf_type_lowpass
../common/../gig/Filter.h:622:47: error: ‘vcf_type_highpass_2p’ is not a member of ‘gig’
                 vcf_type_2p_highpass = ::gig::vcf_type_highpass_2p,
                                               ^~~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:622:47: note: suggested alternative: ‘vcf_type_highpass’
                 vcf_type_2p_highpass = ::gig::vcf_type_highpass_2p,
                                               ^~~~~~~~~~~~~~~~~~~~
                                               vcf_type_highpass
../common/../gig/Filter.h:623:47: error: ‘vcf_type_bandpass_2p’ is not a member of ‘gig’
                 vcf_type_2p_bandpass = ::gig::vcf_type_bandpass_2p,
                                               ^~~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:623:47: note: suggested alternative: ‘vcf_type_bandpass’
                 vcf_type_2p_bandpass = ::gig::vcf_type_bandpass_2p,
                                               ^~~~~~~~~~~~~~~~~~~~
                                               vcf_type_bandpass
../common/../gig/Filter.h:624:49: error: ‘vcf_type_bandreject_2p’ is not a member of ‘gig’
                 vcf_type_2p_bandreject = ::gig::vcf_type_bandreject_2p,
                                                 ^~~~~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:624:49: note: suggested alternative: ‘vcf_type_bandreject’
                 vcf_type_2p_bandreject = ::gig::vcf_type_bandreject_2p,
                                                 ^~~~~~~~~~~~~~~~~~~~~~
                                                 vcf_type_bandreject
../common/../gig/Filter.h:625:46: error: ‘vcf_type_lowpass_4p’ is not a member of ‘gig’
                 vcf_type_4p_lowpass = ::gig::vcf_type_lowpass_4p,
                                              ^~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:625:46: note: suggested alternative: ‘vcf_type_lowpass’
                 vcf_type_4p_lowpass = ::gig::vcf_type_lowpass_4p,
                                              ^~~~~~~~~~~~~~~~~~~
                                              vcf_type_lowpass
../common/../gig/Filter.h:626:47: error: ‘vcf_type_highpass_4p’ is not a member of ‘gig’
                 vcf_type_4p_highpass = ::gig::vcf_type_highpass_4p,
                                               ^~~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:626:47: note: suggested alternative: ‘vcf_type_highpass’
                 vcf_type_4p_highpass = ::gig::vcf_type_highpass_4p,
                                               ^~~~~~~~~~~~~~~~~~~~
                                               vcf_type_highpass
../common/../gig/Filter.h:627:46: error: ‘vcf_type_lowpass_6p’ is not a member of ‘gig’
                 vcf_type_6p_lowpass = ::gig::vcf_type_lowpass_6p,
                                              ^~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:627:46: note: suggested alternative: ‘vcf_type_lowpass’
                 vcf_type_6p_lowpass = ::gig::vcf_type_lowpass_6p,
                                              ^~~~~~~~~~~~~~~~~~~
                                              vcf_type_lowpass
../common/../gig/Filter.h:628:47: error: ‘vcf_type_highpass_6p’ is not a member of ‘gig’
                 vcf_type_6p_highpass = ::gig::vcf_type_highpass_6p,
                                               ^~~~~~~~~~~~~~~~~~~~
../common/../gig/Filter.h:628:47: note: suggested alternative: ‘vcf_type_highpass’
                 vcf_type_6p_highpass = ::gig::vcf_type_highpass_6p,
                                               ^~~~~~~~~~~~~~~~~~~~
                                               vcf_type_highpass
In file included from EngineChannel.h:31,

}}}


I would say that these functions where put in after the latest stable release package (libgig4.2.0.deb) and that libgig would need to be compiled from latest svn pull to match what changes have been made to the linuxsampler engine. 

For, deb packages included in buster/kxstudio repo will suffice. Will revisit another time and install all the needed libraries from svn trunk.


--------------------

====== configuring pulseaudio ======

@pulseaudio @sysconfig

By default, avlinux is configured to have pulseaudio autospawn. This matter is somewhat complicated by service also being managed by systemd.

Adjusting the .config/pulse/client.conf so that autospawn is set to 'no' is not enough.

Disabling the user systemd service, also appears to have no effect. 
`systemctl user disable pulseaudio.service`

remove the systemd files
**disable the audio mixer plugin in the panel.** 
boom

[*] done

--------------------

@docker @rutorrent

setup for rutorrent;

{{{code: lang="sh" linenumbers="False"
docker create   \
--name=rutorrent \
-e PUID=1000 -e PGID=1000 \
-p 8080:80 -p 5000:5000 \
-p 45566:45566 -p 40418:40418/udp \
-v /var/lib/docker/rutorrent/config:/config \
-v /media/downloads:/downloads 
--restart unless-stopped \
linuxserver/rutorrent
}}}



--------------------

 @nvidia @sysconfig

install lowlatency kernel and their headers

reboot

init 3 as root

run sgfxi

export whatever env variable it complains about not having
(something like IGNORE_CC_MISMATCH=1 then reinstall nvidia-legacy joint

oh, and edit xorg.conf to use the nvidia drivers  not the fucking mesa ones. :/

:)



--------------------

